WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15071
[cairo] SVG skews are incorrect
https://bugs.webkit.org/show_bug.cgi?id=15071
Summary
[cairo] SVG skews are incorrect
Alp Toker
Reported
2007-08-24 10:44:20 PDT
The SVG sample at
http://www.croczilla.com/svg/samples/skew1/skew1.xml
exhibits incorrect skewing, suggesting a problem with shear transforms in the Cairo graphics backend.
Attachments
Proposed fix
(1.25 KB, patch)
2007-08-24 10:52 PDT
,
George Wright
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
George Wright
Comment 1
2007-08-24 10:52:58 PDT
Created
attachment 16107
[details]
Proposed fix
Adam Roben (:aroben)
Comment 2
2007-08-24 11:18:18 PDT
Comment on
attachment 16107
[details]
Proposed fix The fix looks fine, but this needs a regression test. I'll r+ the patch once we have a test with results.
Oliver Hunt
Comment 3
2007-08-24 12:32:21 PDT
Comment on
attachment 16107
[details]
Proposed fix This is gtk only and the gtk port does not yet support drt.
Oliver Hunt
Comment 4
2007-08-24 12:43:38 PDT
Sending ChangeLog Sending platform/graphics/cairo/AffineTransformCairo.cpp Transmitting file data .. Committed revision 25214.
Adam Roben (:aroben)
Comment 5
2007-08-24 13:17:30 PDT
Oliver says that we have 3 tests that already cover SVG skew: svg/W3C-SVG-1.1/coords-trans-01-b, svg/W3C-SVG-1.1/pservers-grad-07-b, svg/W3C-SVG-1.1/linking-a-05-t. Presumably those tests would have failed on Gtk if Gtk were able to run the regression tests. So that's why we don't need a new test for this fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug