        Reviewed by Oliver.

http://bugs.webkit.org/show_bug.cgi?id=15071
        [cairo] SVG skews are incorrect

        Fix Cairo implementation of AffineTransform::shear so that shearing is
        done in the correct direction.

        * platform/graphics/cairo/AffineTransformCairo.cpp:
        (WebCore::AffineTransform::shear):



Canonical link: https://commits.webkit.org/19711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25214 268f45cc-cd09-0410-ab3c-d52691b4dbfc